$Id$

* ods-ksmutil: Deprecate the one-step key backup command
* OPENDNSSEC-299: ods-ksmutil <enter> now includes policy import
* OPENDNSSEC-338: ods-ksmutil: fix zone delete on MySQL (broken by SUPPORT-27)
* OPENDNSSEC-345: ods-ksmutil: use ods-control to HUP the enforcerd process

OpenDNSSEC 1.4.0b2

* OPENDNSSEC-315: "ods-hsmutil logout" will delete any credentials in the
  shared memory.
* OPENDNSSEC-330: NSEC3PARAM TTL should be set to zero.

Bugfixes:
* Fixed locking and notification on the drudge work queue, signals could be missed
  so that drudgers would stall when there was work to be done.
* Fixed PIN handling on OpenBSD.


OpenDNSSEC 1.4.0b1 - 2012-09-06

* OPENDNSSEC-130: libhsm: The PIN is now optional in conf.xml. The PIN can be
  entered using "ods-hsmutil login" and is stored in shared memory. The daemons
  will not start until this has been done by the user.
* OPENDNSSEC-297: Enforcer: Multi-threaded option available for the enforcer to
  improve performance (MySQL only). 
* OPENDNSSEC-320: Signer Engine: The <ProvideTransfer>, <Notify>, <AllowNotify>
  and <RequestTransfer> elements are now optional, but if provided they require
  one or more <Peer> or <Remote> elements.

Bugfixes:
* OPENDNSSEC-255: Signer Engine: OpenDNSSEC 1.4.0a1 writes out mangled RRSIG
  record.
* OPENDNSSEC-261: Signer Engine: Ldns fails to parse RR that seems syntactically
  correct.
* OPENDNSSEC-269: Signer Engine: Crash when multiple threads access ixfr struct. 
* OPENDNSSEC-281: Commandhandler sometimes unresponsive.
* OPENDNSSEC-318: Signer Engine: Don't stop dns and xfr handlers if these
  threads have not yet been started.
* OPENDNSSEC-319: Signer Engine: Fix TSIG segfault on signer shutdown.
* OPENDNSSEC-325: Signer Engine: Don't include RRSIG records when DO bit is not
  set.
* OPENDNSSEC-326: Signer Engine: Stop serving a zone that could not be
  transferred from master and has been expired.


OpenDNSSEC 1.4.0a3 - 2012-08-08
